@@ -1,3 +1,9 @@
+2002-04-12  Hideyuki SHIRAI  <shirai@meadowy.org>
+
+	* w3m-proc.el (w3m-process-kill-surely): New internal variable.
+	(w3m-process-kill-process): When `w3m-process-kill-surely' is
+	non-nil, wait for the completion to kill process surely.
+
 2002-04-07  NOMIYA Masaru  <nomiya@ttmy.ne.jp>
 
 	* shimbun/sb-asahi-html.el (shimbun-asahi-html-url): Changed 
